--- a/xpc_basic/doc/dox/xpc_mainpage_generic.dox
+++ b/xpc_basic/doc/dox/xpc_mainpage_generic.dox
@@ -17,8 +17,7 @@
 \file       xpc_mainpage_generic.dox
 \library    XPC Project
 \mainpage   xpc_main XPC Project 1.1.0
-\date       2011-12-23
-\updates    2013-01-12
+\date       2011-12-23 to 2013-01-12
 
 This library is a part of the <b>XPC</b> <i>cross-programming C/C++</i>
 library suite.
