--- a/xpc_basic/doc/dox/debugging/xpc_coverage_profiling.dox
+++ b/xpc_basic/doc/dox/debugging/xpc_coverage_profiling.dox
@@ -5,24 +5,19 @@
  *    This module provides no code.  It provides only a Doxygen "Doxygen
  *    information" page.
  *
- *    No coverage_profiling is provided, since this documentation could be part of
- *    a more comprehensive documentation package covering many libraries and
- *    applications.
- *
  *------------------------------------------------------------------------*//**
 
 \file       xpc_coverage_profiling.dox
-
-   This file provides a tutorial on using the <b>GNU</b> test-coverage and
-   profiling tools.
-
 \library    libxpccut, the C unit-test library
-\page       xpc_coverage_profiling Unit Test Coverage and Profiling
 \author     Chris Ahlstrom
-\version    $Revision$ (1.1.0)
-\date       2009-03-14
-\updates    2012-09-25
-\license    $XPC_SUITE_GPL_LICENSE$ (see \ref xpc_suite_license_subproject)
+\date       2009-03-14 to 2012-09-25
+\license    XPC GPL 3
+
+\page       xpc_coverage_profiling Unit Test Coverage and Profiling
+
+This file provides a tutorial on using the <b>GNU</b> test-coverage and
+profiling tools.
+
 \contents
 
    -# \ref xpc_cp_introduction 
