--- a/xpc_basic/doc/dox/debugging/xpc_debugging.dox
+++ b/xpc_basic/doc/dox/debugging/xpc_debugging.dox
@@ -12,16 +12,15 @@
  *------------------------------------------------------------------------*//**
 
 \file       xpc_debugging.dox
-
-   This file describes the very basics of debugging using <i>gdb</i>.
-
 \library    libxpccut, the C unit-test library
-\page       xpc_debugging Debugging using GDB and Libtool
 \author     Chris Ahlstrom
-\version    $Revision$ (1.1.0)
-\date       2009-05-31
-\updates    2012-09-25
-\license    $XPC_SUITE_GPL_LICENSE$ (see \ref xpc_suite_license_subproject)
+\date       2009-05-31 to 2012-09-25
+\license    XPC GPL 3
+
+\page       xpc_debugging Debugging using GDB and Libtool
+
+This file describes the very basics of debugging using <i>gdb</i>.
+
 \contents
 
    -# \ref xpc_dbg_introduction 
