--- a/xpc_basic/doc/dox/xpc++/xpc++.dox
+++ b/xpc_basic/doc/dox/xpc++/xpc++.dox
@@ -8,17 +8,14 @@
  *------------------------------------------------------------------------*//**
 
 \file       xpc++.dox
-
-   This file describes the <b>XPC++</b> utility library, which is considered
-   the basic C++ library in the <b>XPC++</b> suite.
-
-\library    xpc
-\page       xpc_utility_introduction XPC++ C++ Utility Library
 \author     Chris Ahlstrom
-\version    $Revision$ (1.1.0)
-\date       2010-05-30
-\updates    2012-9-25
-\license    $XPC_SUITE_GPL_LICENSE$ (see \ref xpc_suite_license_subproject)
+\date       2010-05-30 to 2012-09-25
+\license    XPC GPL 3
+
+\page       xpc_utility_introduction XPC++ C++ Utility Library
+
+This file describes the <b>XPC++</b> utility library, which is considered
+the basic C++ library in the <b>XPC++</b> suite.
 
 \section xpcpp_utility_introduction Introduction to the XPC C++ Basic Library
 
@@ -27,15 +24,9 @@
    application might need.  This library is the main (and most basic)
    library in the <b>XPC++</b> library suite.
 
-   <b>MORE TO COME</b>
-
    Although the utility <b>XPC++</b> library is written and somewhat tested,
    it is a work in progress and we have not yet had time to describe it at
    a higher level.
-
-   In the meantime, you can build the detailed-design documentation by
-   running <i>doxygen</i> against the <tt>doxygen.cfg</tt> in directory
-   <tt>xpc++/doc/dox</tt>.
 
  *//*-------------------------------------------------------------------------*/
 
