--- a/xpc_basic/doc/dox/xpc_license.dox
+++ b/xpc_basic/doc/dox/xpc_license.dox
@@ -7,25 +7,17 @@
  *------------------------------------------------------------------------*//**
 
 \file       xpc_license.dox
-
-   This file is a copy of the main license file.
-
-\page       xpc_suite_license_subproject Licenses, XPC Library Suite
 \library    xpc_suite and its libraries, applications, and documents
 \author     Chris Ahlstrom
-\version    $Revision$ (1.1.0)
-\date       2008-02-24
-\update     2013-01-12
-\license    $XPC_SUITE_GPL_LICENSE$
+\date       2008-02-24 to 2022-01-12
+\license    XPC GPL 3
+
+\page       xpc_suite_license_subproject Licenses, XPC Library Suite
+
+This file is a copy of the main license file.
 
 \section xpc_suite_license_text License Terms for the XPC Library Suite
 
-   Wherever the tag $XPC_SUITE_GPL_LICENSE$ appears, substitute the
-   appropriate license text, depending on whether the project is a library,
-   application, documentation, or server software.  We're not going to
-   include paragraphs of licensing information in every module; you are
-   responsible for coming here to read the licensing information.
-   
    These licenses apply to each sub-project and file artifact in the
    <b>XPC</b> library suite.
 
@@ -38,7 +30,7 @@
 
    The <b>XPC</b> application license is the <b>GNU GPLv3</b>.
 
-   Copyright (C) 2008-2013 by Chris Ahlstrom
+   Copyright (C) 2008-2022 by Chris Ahlstrom
 
    This program is free software; you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
@@ -67,7 +59,7 @@
 
    The <b>XPC</b> library license is the <b>GNU LGPLv3</b>.
 
-   Copyright (C) 2008-2013 by Chris Ahlstrom
+   Copyright (C) 2008-2022 by Chris Ahlstrom
 
    This library is free software; you can redistribute it and/or modify
    it under the terms of the GNU Lesser General Public License as published
@@ -96,7 +88,7 @@
 
    The <b>XPC</b> documentation license is the <b>GNU FDLv1.3</b>.
 
-   Copyright (C) 2008-2013 by Chris Ahlstrom
+   Copyright (C) 2008-2022 by Chris Ahlstrom
 
    This documentation is free documentation; you can redistribute it and/or
    modify it under the terms of the GNU Free Documentation License as
@@ -125,7 +117,7 @@
 
    The <b>XPC</b> "Affero" license is the <b>GNU AGPLv3</b>.
 
-   Copyright (C) 2008-2013 by Chris Ahlstrom
+   Copyright (C) 2008-2022 by Chris Ahlstrom
 
    This server software is free server software; you can redistribute it and/or
    modify it under the terms of the GNU Affero General Public License as
