--- a/xpc_basic/doc/dox/xpc_philosophy.dox
+++ b/xpc_basic/doc/dox/xpc_philosophy.dox
@@ -7,15 +7,15 @@
  *------------------------------------------------------------------------*//**
 
 \file       xpc_philosophy.dox
-
-   This file describes a little bit about our coding style and philosophy.
-
-\page       xpc_suite_philosophy_subproject Philosophy, XPC Library Suite
 \library    xpc_suite and its libraries, applications, and documents
 \author     Chris Ahlstrom
 \version    $Revision$ (1.1.0)
 \date       2009-07-31 to 2012-09-25
-\license    $XPC_SUITE_GPL_LICENSE$ (see \ref xpc_suite_license_subproject)
+\license    XPC GPL 3
+
+\page       xpc_suite_philosophy_subproject Philosophy, XPC Library Suite
+
+This file describes a little bit about our coding style and philosophy.
 
 \section xpc_suite_philosophy_text Philosophy of the XPC Library Suite
 
