--- a/xpc_basic/doc/dox/xpc_suite.dox
+++ b/xpc_basic/doc/dox/xpc_suite.dox
@@ -18,10 +18,8 @@
 \library    xpc_suite
 \mainpage   XPC Suite of Libraries and Sample Applications
 \author     Chris Ahlstrom
-\version    $Revision$ (1.1.0)
-\date       2011-12-17
-\update     2013-01-12
-\license    $XPC_SUITE_GPL_LICENSE$ (See \ref xpc_suite_license_subproject)
+\date       2011-12-17 to 2013-01-12
+\license    XPC GPL 3
 
 \section xpc_suite_intro Introduction
 
